--- a/platformio.ini
+++ b/platformio.ini
@@ -10,10 +10,11 @@
 
 [common]
 name = gpstracker
-version = 0.9
+version = 0.9.2
 
 [publish]
 host = 192.168.1.1
+path = scripts/espupdate/
 
 [env:esp12e]
 platform = espressif8266
@@ -26,3 +27,4 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.9
 	adafruit/Adafruit SSD1306@^2.5.7
 extra_scripts = pre:publish_firmware.py	
+build_flags = -DSW_NAME='"${common.name}"' -DSW_VERSION='"${common.version}"'
