--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [common]
-name = gpstracker
+name = gpstracker_l80
 version = 0.9.2
 
 [publish]
